--- a/index.html
+++ b/index.html
@@ -1,13 +1,15 @@
 <!DOCTYPE html>
 <html lang="zh-CN">
-  <head>
-    <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>全时空军事名将乱战</title>
-  </head>
-  <body>
-    <div id="root"></div>
-    <script type="module" src="/src/main.tsx"></script>
-  </body>
+
+<head>
+  <meta charset="UTF-8">
+  <meta http-equiv="refresh" content="0; url=game.html">
+  <title>全时空军事名将乱战</title>
+</head>
+
+<body>
+  <p>正在跳转到游戏...</p>
+  <script>window.location.href = "game.html";</script>
+</body>
+
 </html>
